infra/argo-events/templates/ingress.yaml
# Secure version of Ingress
# TODO I'll need to create a separate certificate etc for this
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argo-events-ingress
#   namespace: argo-events
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-argocd
#     kubernetes.io/tls-acme: "true"
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: argo-events.curious-outcomes.community
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: github-co-eventsource-svc
#             port:
#               number: 12000
#   tls:
#   - hosts:
#     - argo-events.curious-outcomes.community
#     secretName: argocd-server-tls

# ---
# Insecure version of Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-events-ingress
  namespace: argo-events
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: argo-events.curious-outcomes.community
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-co-eventsource-svc
            port:
              number: 12000
